force-app/main/default/objects/Student__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <type>Phone</type>
</CustomField>