force-app/main/default/objects/Student__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <displayFormat>SN-{000}</displayFormat>
    <label>Serial No</label>
    <type>AutoNumber</type>
</CustomField>