force-app/main/default/objects/Student__c/fields/Software_Course__c.field-meta.xml
<CustomField>
    <fullName>Software_Course__c</fullName>
    <label>Software Course</label>
    <referenceTo>Software_Course__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>