force-app/main/default/objects/Student__c/fields/Student_Roll_No__c.field-meta.xml
<CustomField>
    <fullName>Student_Roll_No__c</fullName>
    <label>Student Roll No</label>
    <length>19</length>
    <type>Text</type>
</CustomField>