force-app/main/default/objects/Student__c/fields/Year_Of_Study__c.field-meta.xml
<CustomField>
    <fullName>Year_Of_Study__c</fullName>
    <label>Year Of Study</label>
    <length>19</length>
    <type>Text</type>
</CustomField>