force-app/main/default/objects/Student__c/recordTypes/Non_Technical_Students.recordType-meta.xml
<RecordType>
    <fullName>Non_Technical_Students</fullName>
    <active>true</active>
    <label>Non Technical Students</label>
</RecordType>