force-app/main/default/objects/Student__c/recordTypes/Technical_Students.recordType-meta.xml
<RecordType>
    <fullName>Technical_Students</fullName>
    <active>true</active>
    <label>Technical Students</label>
</RecordType>